test/fail/errors/RepeatedVariableInPattern.agda

module RepeatedVariableInPattern where

K : Set -> Set
K A A = A

